--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==4.12.1
+APScheduler==3.11.2
 certifi==2026.1.4
 h11==0.16.0
 httpcore==1.0.9
@@ -6,3 +7,4 @@ httpx==0.28.1
 idna==3.11
 python-dotenv==1.2.1
 python-telegram-bot==22.6
+tzlocal==5.3.1
